# allo

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  requirements.txt  setup.py  test.py
.github/workflows/: config.yml
allo/: __init__.py  sched.py
allo/bindings/: __init__.py  ir.pyi  transform.pyi  utils.py  utils.pyi
allo/experimental/: __init__.py  __init__.pyi  _utils.py  errors.py  settings.py
allo/experimental/compiler/: builder.py  errors.py  generator.py
allo/experimental/core/: __init__.py  kernel.py  library.py  rule.py  schedule.py  types.py  types.pyi
allo/experimental/dsl/: __init__.py  builtins.py  math.py  ops_arith.py  ops_channel.py  ops_common.py  ops_memory.py  ops_types.py
include/: CMakeLists.txt  InitAllDialects.h  InitAllPasses.h
include/allo/: CMakeLists.txt
lib/: CMakeLists.txt
lib/Analysis/: CMakeLists.txt  DataflowAnalysis.cpp
lib/IR/: AlloOps.cpp  CMakeLists.txt
lib/Transform/: ApplyVirtualMapping.cpp  CMakeLists.txt
lib/TransformOps/: CMakeLists.txt  DataflowTransformation.cpp  DialectExtension.cpp  LoopTransformation.cpp  RaiseToAffine.cpp  Utils.cpp
lib/Transforms/: CMakeLists.txt  ShardingInterfaceImpl.cpp
lib/Translation/: BaseEmitter.cpp  BaseHLSEmitter.cpp  CMakeLists.txt
mlir/python/: ir.cpp  ir.h  main.cpp  ops.cpp  transform.cpp  utils.cpp
mlir/tests/: buffer_at.mlir  reuse_at.mlir
python/: CMakeLists.txt  allo.cpp  ir.cpp  ir.h  main.cpp  ops.cpp  transform.cpp
tools/: CMakeLists.txt
tools/allo-lsp-server/: CMakeLists.txt  allo-lsp-server.cpp
tools/allo-opt/: CMakeLists.txt  allo-opt.cpp
(+29 files in other folders)
